# VID-Dataset

./: .gitignore  README.md
src/RTKMag2odom/: CMakeLists.txt  package.xml
src/RTKMag2odom/config/: rtkmag2odom_params.yaml
src/RTKMag2odom/include/rtkmag2odom/: rtkmag2odom.h
src/RTKMag2odom/launch/: rtkmag2odom.launch
src/RTKMag2odom/src/: rtkmag2odom.cpp  rtkmag2odom_node.cpp
src/datasettools/: CMakeLists.txt  package.xml
src/datasettools/launch/: rpmconvert.launch  timeconvert.launch
src/datasettools/src/: rpmconvert.cpp  timeconvert.cpp
src/djiros/: CMakeLists.txt
src/djiros/include/dji_sdk/: dji_sdk_node.h
src/djiros/include/djiros/: DjiRos.h
src/djiros/launch/: djiros.launch
src/djiros/msg/: ImuWithHwTimeStamp.msg  Pulse.msg
src/djiros/src/djiros/: DjiRos.cpp  DjiRosPublisher.cpp  DjiRosServices.cpp
src/quadrotor_msgs/quadrotor_common/: CMakeLists.txt  package.xml
src/quadrotor_msgs/quadrotor_common/include/quadrotor_common/: control_command.h  math_common.h  quad_state_estimate.h  trajectory.h  trajectory_point.h
src/quadrotor_msgs/quadrotor_common/src/: control_command.cpp  geometry_eigen_conversions.cpp  math_common.cpp  parameter_helper.cpp  quad_state_estimate.cpp  quaternion_functions.cpp  trajectory.cpp  trajectory_point.cpp
src/quadrotor_msgs/quadrotor_msgs/: CMakeLists.txt  package.xml
src/quadrotor_msgs/state_predictor/: CMakeLists.txt  package.xml
src/quadrotor_msgs/state_predictor/include/state_predictor/: state_predictor.h
src/quadrotor_msgs/state_predictor/src/: quad_ext_state_estimate.cpp  state_predictor.cpp
src/realsense-ros-development/: .travis.yml
src/realsense-ros-development/realsense2_camera/launch/: rs_camera.launch
src/realsense-ros-development/realsense2_camera/scripts/: rs2_listener.py  rs2_test.py  show_center_depth.py
src/robotiq/robotiq_ft_sensor/launch/: rviz_sesion.rviz  visualize_ft300.launch
src/robotiq/robotiq_modbus_rtu/src/robotiq_modbus_rtu/: comModbusRtu.py
src/rstools/: CMakeLists.txt  package.xml
src/rstools/launch/: set_rssyncmode.launch
src/rstools/src/: syncmode.cpp
src/rtk_zhd_parser/: CMakeLists.txt  package.xml
src/rtk_zhd_parser/config/: .rtk_zhd_parser_params.yaml.swp  rtk_zhd_parser_params.yaml
src/rtk_zhd_parser/include/rtk_zhd_parser/: rtk_zhd_parser.h  serial.h
src/rtk_zhd_parser/launch/: rtk_zhd_parser.launch
src/rtk_zhd_parser/src/: rtk_zhd_parser.cpp  rtk_zhd_parser_node.cpp  serial.cpp
src/uavmotor/: CMakeLists.txt  package.xml
src/uavmotor/include/uavmotor/: DataClassifier.hpp  UARTUnpacker.hpp
src/uavmotor/launch/: m100withm3508.launch
src/uavmotor/msg/: m3508.msg  motordata.msg  pulsecap.msg
src/uavmotor/src/: m100withm3508.cpp
tools/: convertbag.sh
