<package>
  <name>rtkmag2odom</name>
  <author email="someone@somewhere.com">someone</author>
  <maintainer email="someone@somewhere.com">someone</maintainer>
  <version>0.1.0</version>
  <description>
      the rtkmag2odom package
  </description>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  
</package>

