<?xml version="1.0"?>
<package format="2">
  <name>state_predictor</name>
  <version>0.0.0</version>
  <description>The state_predictor package</description>

  <maintainer email="zky709271525@163.com">Allen</maintainer>
  <license>MIT</license>
  <author>Allen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>quadrotor_msgs</build_depend>
  <build_depend>quadrotor_common</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>quadrotor_msgs</build_export_depend>
  <build_export_depend>quadrotor_common</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>quadrotor_msgs</exec_depend>
  <exec_depend>quadrotor_common</exec_depend>

  <export>
    
  </export>
</package>
